[package]
name = "github-deploy-helper"
version = "0.9.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"
hmac = "0.13"
sha2 = "0.11"
hex = "0.4"
base64 = "0.22"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
dashmap = "6"
glob = "0.3"
teloxide = { version = "0.17", default-features = false, features = ["rustls"] }
jsonwebtoken = { version = "10", default-features = false, features = [
    "aws_lc_rs",
    "use_pem",
] }
reqwest = { version = "0.13", default-features = false, features = [
    "rustls",
    "json",
    "socks",
] }
rustls = { version = "0.23", default-features = false, features = [
    "aws_lc_rs",
] }
regex = "1"

[profile.release]
lto = true
panic = "abort"
